Fix z-index of payment modal

--- a/src/web/assets/frontend/src/scss/other/modal.scss
+++ b/src/web/assets/frontend/src/scss/other/modal.scss
@@ -15,6 +15,7 @@
     visibility: hidden;
     opacity: 0;
     will-change: opacity;
+    z-index: 10000;
 
     &.is-open {
         visibility: visible;
